generated/checkers/refine/KN-Integer-Overflow-768f17fd-0/build_logs/syntax-repair-refine-2-3/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::computeExprUpperBoundEx(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&, {anonymous}::SAGenTestChecker::UpperBoundOrigin&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:380:41: error: ‘getAllOnesValue’ is not a member of ‘llvm::APInt’
  380 |         llvm::APInt Ones = llvm::APInt::getAllOnesValue(EffWidth);
      |                                         ^~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
